--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ACTIVATION_TOKEN_SECRET = D4R;E'+v/3?m{<:~w5wa[cXA@'.65x-N8]c`)mL4/c2vJCxYHx
 REFRESH_TOKEN_SECRET = Ju=n*aw3<Jb]Q~G8yE@kp2]!'QBpJwGNT4"uR4X#g],g'#P[ZS
 
 # CLIENT_URL = https://buihoanglong19012001.netlify.app/
-CLIENT_URL = http://localhost:1901
+CLIENT_URL = http://13.251.59.19:31112
 PORT = 8800
 AUTH_PORT = 8400
 
