--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://anhlongwin:anhlongwin1901@cluster0.uhvmb.mongodb.net/E-commerse-app?retryWrites=true&w=majority
+MONGO_URL = mongodb://anhlongwin:anhlongwin1901@cluster0.uhvmb.mongodb.net/E-commerse-app?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = GxA)?p8)c9x[4e`CZD"z?`B^rHN!:vC[,pz9y#.:"L"n^'hH*j
 ACTIVATION_TOKEN_SECRET = D4R;E'+v/3?m{<:~w5wa[cXA@'.65x-N8]c`)mL4/c2vJCxYHx
