--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb://anhlongwin:anhlongwin1901@cluster0.uhvmb.mongodb.net/E-commerse-app?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://anhlongwin:anhlongwin1901@cluster0.uhvmb.mongodb.net/E-commerse-app?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = GxA)?p8)c9x[4e`CZD"z?`B^rHN!:vC[,pz9y#.:"L"n^'hH*j
 ACTIVATION_TOKEN_SECRET = D4R;E'+v/3?m{<:~w5wa[cXA@'.65x-N8]c`)mL4/c2vJCxYHx
@@ -6,7 +6,7 @@ REFRESH_TOKEN_SECRET = Ju=n*aw3<Jb]Q~G8yE@kp2]!'QBpJwGNT4"uR4X#g],g'#P[ZS
 
 # CLIENT_URL = https://buihoanglong19012001.netlify.app/
 CLIENT_URL = http://13.251.59.19:31112
-PORT = 8800
+PORT = 31111
 AUTH_PORT = 8400
 
 PASS_EMAIL=ebhouwvidsfgnske
