--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://anhlongwin@cluster0.uhvmb.mongodb.net/E-commerse-app?replicaSet=atlas-m03qlp-shard-0&readPreference=primary&srvServiceName=mongodb&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1&3t.uriVersion=3&3t.connection.name=atlas-m03qlp-shard-0&3t.databases=E-commerse-app,admin&3t.alwaysShowAuthDB=true&3t.alwaysShowDBFromUserRole=true&3t.sslTlsVersion=TLS
+MONGO_URL = mongodb+srv://airnang:airnang@cluster0.uxksf.mongodb.net/E-commerse-app?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = GxA)?p8)c9x[4e`CZD"z?`B^rHN!:vC[,pz9y#.:"L"n^'hH*j
 ACTIVATION_TOKEN_SECRET = D4R;E'+v/3?m{<:~w5wa[cXA@'.65x-N8]c`)mL4/c2vJCxYHx
